location$, speed$ and gasLevel$ combined

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Termo Stil</title>
-        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGEkPqD4_VNZ3JB8bEoJd4WZC_djDvx0k&libraries=places&callback=Function.prototype"></script> 
+        <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGEkPqD4_VNZ3JB8bEoJd4WZC_djDvx0k&libraries=places,geometry&callback=Function.prototype"></script> 
         <link rel="stylesheet" type="text/css" href="./style.css"/>
     </head>
     <body>
