--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Termo Stil</title>
+        <title>Logistics App</title>
         <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAGEkPqD4_VNZ3JB8bEoJd4WZC_djDvx0k&libraries=places,geometry&callback=Function.prototype"></script> 
         <link rel="stylesheet" type="text/css" href="./style.css"/>
     </head>
